# nixos-search-prototypes

./: .gitignore  Cargo.toml  Readme.md  devenv.nix  index.html  plan.md
src/: main.rs
