[package]
name = "nixos-search-prototype"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
nix-index = { git = "https://github.com/nix-community/nix-index/", version = "0.1.9" }
regex = "1.11.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
